Reduce ImageCards content padding to fix overflowing text

--- a/src/components/ImageCard/ImageCard.module.css
+++ b/src/components/ImageCard/ImageCard.module.css
@@ -24,7 +24,7 @@
 }
 
 .content {
-    padding: 5px 10%;
+    padding: 4px 9%;
 }
 
 .cardButton {
